# ML-Learning

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-context.sh
docs/: database.md  environment.md  methodology.md  optional-tools.md  tools.md  workflow.md
memory/: progress.md
memory/completed/: README.md
memory/performance/: README.md  estatistica-descritiva.md
planning/: current-focus.md  roadmap.md
planning/assessments/: README.md  baseline.md
planning/concepts/: README.md
practice/labs/: README.md  dados.csv  media_variancia.html  media_variancia.ipynb
practice/notebooks/: 01_estatistica_descritiva.ipynb  README.md
