[project]
name = "ml-learning"
version = "0.1.0"
description = "Laboratório pessoal de aprendizado de ML com dados do fintrack."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "phraulino" }]

# Dependências mínimas para começar — adicione conforme o roadmap avançar.
dependencies = [
    # Dados e notebooks
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",

    # Visualização
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",

    # ML clássico
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "statsmodels>=0.14",

    # Banco
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Instale sob demanda conforme entrar em cada fase do roadmap.
boosting = ["xgboost>=2.0", "lightgbm>=4.3"]
timeseries = ["prophet>=1.1", "pmdarima>=2.0"]
deeplearning = ["torch>=2.2", "torchvision>=0.17"]
nlp = ["scikit-learn>=1.4", "nltk>=3.8", "spacy>=3.7"]
spark = ["pyspark>=3.5"]
dev = [
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "pytest>=8.0",
    "nbstripout>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
