[tool.poetry]
name = "ml-learning"
version = "0.1.0"
description = "Laboratório pessoal de aprendizado de ML com dados do fintrack."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = ">=1.1.1,<2.0.0"
ipykernel = ">=7.2.0,<8.0.0"
numpy = ">=2.4.4,<3.0.0"
pandas = ">=3.0.2,<4.0.0"
pyarrow = ">=23.0.1,<24.0.0"
matplotlib = ">=3.10.8,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
plotly = ">=6.7.0,<7.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
scipy = ">=1.17.1,<2.0.0"
statsmodels = ">=0.14.6,<0.15.0"
sqlalchemy = ">=2.0.49,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
python-dotenv = ">=1.2.2,<2.0.0"

[tool.poetry.group.boosting.dependencies]
xgboost = ">=2.0"
lightgbm = ">=4.3"

[tool.poetry.group.timeseries.dependencies]
prophet = ">=1.1"
pmdarima = ">=2.0"

[tool.poetry.group.deeplearning.dependencies]
torch = ">=2.2"
torchvision = ">=0.17"

[tool.poetry.group.nlp.dependencies]
nltk = ">=3.8"
spacy = ">=3.7"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.4"
black = ">=24.3"
mypy = ">=1.9"
pytest = ">=8.0"
nbstripout = ">=0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]